dynamo_parser/generated/org/sdxchange/dynamo/parser/DynamoParser.java
// $ANTLR 3.5.2 C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g 2015-05-26 18:14:28

package org.sdxchange.dynamo.parser;
import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class DynamoParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AUX", "COMMENT", "CONST", "CONTROL", 
		"CSECTOR", "DOCUMENT", "EQN", "FORMAL_PARAMS", "FREF", "ID", "INTRN", 
		"IVALUE", "JKL", "LEVEL", "LOCALS", "MACRO", "MACRODEF", "MEND", "MODEL", 
		"MODULE", "NEWLINE", "NOTE", "NUMBER", "PARAMS", "PAUX", "PLOT", "PLOTVAR", 
		"PLOTVLIST", "PRINT", "PSECTOR", "PTS", "RATE", "RUN", "SCALE", "SECTOR", 
		"SPEC", "TAUX", "UNARYMINUS", "UNARYPLUS", "VARIABLES", "VIEW", "WS", 
		"XCOORDS", "YCOORDS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", 
		"'='", "'A'", "'C'", "'L'", "'N'", "'R'", "'T'", "'TABHL'", "'TABLE'", 
		"'TABPL'", "'TABXT'", "'['", "'\\.'", "']'"
	};
	public static final int EOF=-1;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int AUX=4;
	public static final int COMMENT=5;
	public static final int CONST=6;
	public static final int CONTROL=7;
	public static final int CSECTOR=8;
	public static final int DOCUMENT=9;
	public static final int EQN=10;
	public static final int FORMAL_PARAMS=11;
	public static final int FREF=12;
	public static final int ID=13;
	public static final int INTRN=14;
	public static final int IVALUE=15;
	public static final int JKL=16;
	public static final int LEVEL=17;
	public static final int LOCALS=18;
	public static final int MACRO=19;
	public static final int MACRODEF=20;
	public static final int MEND=21;
	public static final int MODEL=22;
	public static final int MODULE=23;
	public static final int NEWLINE=24;
	public static final int NOTE=25;
	public static final int NUMBER=26;
	public static final int PARAMS=27;
	public static final int PAUX=28;
	public static final int PLOT=29;
	public static final int PLOTVAR=30;
	public static final int PLOTVLIST=31;
	public static final int PRINT=32;
	public static final int PSECTOR=33;
	public static final int PTS=34;
	public static final int RATE=35;
	public static final int RUN=36;
	public static final int SCALE=37;
	public static final int SECTOR=38;
	public static final int SPEC=39;
	public static final int TAUX=40;
	public static final int UNARYMINUS=41;
	public static final int UNARYPLUS=42;
	public static final int VARIABLES=43;
	public static final int VIEW=44;
	public static final int WS=45;
	public static final int XCOORDS=46;
	public static final int YCOORDS=47;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public DynamoParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public DynamoParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return DynamoParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:49:1: prog : ( macroDef )* ( defaultModule )? ( namedModule )* ( controlSector ( controlStat | comment )+ ( viewSpec )* )? ( NEWLINE )* -> ^( DOCUMENT ^( CONTROL ( controlStat )* ) ^( MODEL ( defaultModule ( ^( VIEW ( viewSpec )* ) )? )? ( namedModule )* ) ( macroDef )* ) ;
	public final DynamoParser.prog_return prog() throws RecognitionException {
		DynamoParser.prog_return retval = new DynamoParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NEWLINE8=null;
		ParserRuleReturnScope macroDef1 =null;
		ParserRuleReturnScope defaultModule2 =null;
		ParserRuleReturnScope namedModule3 =null;
		ParserRuleReturnScope controlSector4 =null;
		ParserRuleReturnScope controlStat5 =null;
		ParserRuleReturnScope comment6 =null;
		ParserRuleReturnScope viewSpec7 =null;

		Object NEWLINE8_tree=null;
		RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
		RewriteRuleSubtreeStream stream_controlStat=new RewriteRuleSubtreeStream(adaptor,"rule controlStat");
		RewriteRuleSubtreeStream stream_viewSpec=new RewriteRuleSubtreeStream(adaptor,"rule viewSpec");
		RewriteRuleSubtreeStream stream_namedModule=new RewriteRuleSubtreeStream(adaptor,"rule namedModule");
		RewriteRuleSubtreeStream stream_controlSector=new RewriteRuleSubtreeStream(adaptor,"rule controlSector");
		RewriteRuleSubtreeStream stream_comment=new RewriteRuleSubtreeStream(adaptor,"rule comment");
		RewriteRuleSubtreeStream stream_defaultModule=new RewriteRuleSubtreeStream(adaptor,"rule defaultModule");
		RewriteRuleSubtreeStream stream_macroDef=new RewriteRuleSubtreeStream(adaptor,"rule macroDef");

		try {
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:2: ( ( macroDef )* ( defaultModule )? ( namedModule )* ( controlSector ( controlStat | comment )+ ( viewSpec )* )? ( NEWLINE )* -> ^( DOCUMENT ^( CONTROL ( controlStat )* ) ^( MODEL ( defaultModule ( ^( VIEW ( viewSpec )* ) )? )? ( namedModule )* ) ( macroDef )* ) )
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:4: ( macroDef )* ( defaultModule )? ( namedModule )* ( controlSector ( controlStat | comment )+ ( viewSpec )* )? ( NEWLINE )*
			{
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:4: ( macroDef )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==MACRO) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:4: macroDef
					{
					pushFollow(FOLLOW_macroDef_in_prog195);
					macroDef1=macroDef();
					state._fsp--;

					stream_macroDef.add(macroDef1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:14: ( defaultModule )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==NOTE||(LA2_0 >= 56 && LA2_0 <= 61)) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:14: defaultModule
					{
					pushFollow(FOLLOW_defaultModule_in_prog198);
					defaultModule2=defaultModule();
					state._fsp--;

					stream_defaultModule.add(defaultModule2.getTree());
					}
					break;

			}

			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:29: ( namedModule )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==PSECTOR) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:29: namedModule
					{
					pushFollow(FOLLOW_namedModule_in_prog201);
					namedModule3=namedModule();
					state._fsp--;

					stream_namedModule.add(namedModule3.getTree());
					}
					break;

				default :
					break loop3;
				}
			}

			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:42: ( controlSector ( controlStat | comment )+ ( viewSpec )* )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==CSECTOR) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:43: controlSector ( controlStat | comment )+ ( viewSpec )*
					{
					pushFollow(FOLLOW_controlSector_in_prog205);
					controlSector4=controlSector();
					state._fsp--;

					stream_controlSector.add(controlSector4.getTree());
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:57: ( controlStat | comment )+
					int cnt4=0;
					loop4:
					while (true) {
						int alt4=3;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==RUN||LA4_0==SPEC) ) {
							alt4=1;
						}
						else if ( (LA4_0==NOTE) ) {
							alt4=2;
						}

						switch (alt4) {
						case 1 :
							// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:58: controlStat
							{
							pushFollow(FOLLOW_controlStat_in_prog208);
							controlStat5=controlStat();
							state._fsp--;

							stream_controlStat.add(controlStat5.getTree());
							}
							break;
						case 2 :
							// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:72: comment
							{
							pushFollow(FOLLOW_comment_in_prog212);
							comment6=comment();
							state._fsp--;

							stream_comment.add(comment6.getTree());
							}
							break;

						default :
							if ( cnt4 >= 1 ) break loop4;
							EarlyExitException eee = new EarlyExitException(4, input);
							throw eee;
						}
						cnt4++;
					}

					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:83: ( viewSpec )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==PLOT||LA5_0==PRINT) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:83: viewSpec
							{
							pushFollow(FOLLOW_viewSpec_in_prog217);
							viewSpec7=viewSpec();
							state._fsp--;

							stream_viewSpec.add(viewSpec7.getTree());
							}
							break;

						default :
							break loop5;
						}
					}

					}
					break;

			}

			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:95: ( NEWLINE )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==NEWLINE) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:95: NEWLINE
					{
					NEWLINE8=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_prog222);  
					stream_NEWLINE.add(NEWLINE8);

					}
					break;

				default :
					break loop7;
				}
			}

			// AST REWRITE
			// elements: controlStat, namedModule, viewSpec, macroDef, defaultModule
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 50:104: -> ^( DOCUMENT ^( CONTROL ( controlStat )* ) ^( MODEL ( defaultModule ( ^( VIEW ( viewSpec )* ) )? )? ( namedModule )* ) ( macroDef )* )
			{
				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:107: ^( DOCUMENT ^( CONTROL ( controlStat )* ) ^( MODEL ( defaultModule ( ^( VIEW ( viewSpec )* ) )? )? ( namedModule )* ) ( macroDef )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DOCUMENT, "DOCUMENT"), root_1);
				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:118: ^( CONTROL ( controlStat )* )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(CONTROL, "CONTROL"), root_2);
				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:128: ( controlStat )*
				while ( stream_controlStat.hasNext() ) {
					adaptor.addChild(root_2, stream_controlStat.nextTree());
				}
				stream_controlStat.reset();

				adaptor.addChild(root_1, root_2);
				}

				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:142: ^( MODEL ( defaultModule ( ^( VIEW ( viewSpec )* ) )? )? ( namedModule )* )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(MODEL, "MODEL"), root_2);
				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:150: ( defaultModule ( ^( VIEW ( viewSpec )* ) )? )?
				if ( stream_defaultModule.hasNext() ) {
					adaptor.addChild(root_2, stream_defaultModule.nextTree());
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:165: ( ^( VIEW ( viewSpec )* ) )?
					if ( stream_viewSpec.hasNext() ) {
						// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:165: ^( VIEW ( viewSpec )* )
						{
						Object root_3 = (Object)adaptor.nil();
						root_3 = (Object)adaptor.becomeRoot((Object)adaptor.create(VIEW, "VIEW"), root_3);
						// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:172: ( viewSpec )*
						while ( stream_viewSpec.hasNext() ) {
							adaptor.addChild(root_3, stream_viewSpec.nextTree());
						}
						stream_viewSpec.reset();

						adaptor.addChild(root_2, root_3);
						}

					}
					stream_viewSpec.reset();

				}
				stream_defaultModule.reset();

				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:186: ( namedModule )*
				while ( stream_namedModule.hasNext() ) {
					adaptor.addChild(root_2, stream_namedModule.nextTree());
				}
				stream_namedModule.reset();

				adaptor.addChild(root_1, root_2);
				}

				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:50:201: ( macroDef )*
				while ( stream_macroDef.hasNext() ) {
					adaptor.addChild(root_1, stream_macroDef.nextTree());
				}
				stream_macroDef.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class controlModule_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "controlModule"
	// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:53:1: controlModule : controlSector ( controlStat | comment )+ ( viewSpec )* -> ^( CONTROL ( controlStat )+ ) ^( VIEW ( viewSpec )* ) ;
	public final DynamoParser.controlModule_return controlModule() throws RecognitionException {
		DynamoParser.controlModule_return retval = new DynamoParser.controlModule_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope controlSector9 =null;
		ParserRuleReturnScope controlStat10 =null;
		ParserRuleReturnScope comment11 =null;
		ParserRuleReturnScope viewSpec12 =null;

		RewriteRuleSubtreeStream stream_controlStat=new RewriteRuleSubtreeStream(adaptor,"rule controlStat");
		RewriteRuleSubtreeStream stream_viewSpec=new RewriteRuleSubtreeStream(adaptor,"rule viewSpec");
		RewriteRuleSubtreeStream stream_controlSector=new RewriteRuleSubtreeStream(adaptor,"rule controlSector");
		RewriteRuleSubtreeStream stream_comment=new RewriteRuleSubtreeStream(adaptor,"rule comment");

		try {
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:3: ( controlSector ( controlStat | comment )+ ( viewSpec )* -> ^( CONTROL ( controlStat )+ ) ^( VIEW ( viewSpec )* ) )
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:5: controlSector ( controlStat | comment )+ ( viewSpec )*
			{
			pushFollow(FOLLOW_controlSector_in_controlModule276);
			controlSector9=controlSector();
			state._fsp--;

			stream_controlSector.add(controlSector9.getTree());
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:19: ( controlStat | comment )+
			int cnt8=0;
			loop8:
			while (true) {
				int alt8=3;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==RUN||LA8_0==SPEC) ) {
					alt8=1;
				}
				else if ( (LA8_0==NOTE) ) {
					alt8=2;
				}

				switch (alt8) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:20: controlStat
					{
					pushFollow(FOLLOW_controlStat_in_controlModule279);
					controlStat10=controlStat();
					state._fsp--;

					stream_controlStat.add(controlStat10.getTree());
					}
					break;
				case 2 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:34: comment
					{
					pushFollow(FOLLOW_comment_in_controlModule283);
					comment11=comment();
					state._fsp--;

					stream_comment.add(comment11.getTree());
					}
					break;

				default :
					if ( cnt8 >= 1 ) break loop8;
					EarlyExitException eee = new EarlyExitException(8, input);
					throw eee;
				}
				cnt8++;
			}

			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:45: ( viewSpec )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==PLOT||LA9_0==PRINT) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:45: viewSpec
					{
					pushFollow(FOLLOW_viewSpec_in_controlModule288);
					viewSpec12=viewSpec();
					state._fsp--;

					stream_viewSpec.add(viewSpec12.getTree());
					}
					break;

				default :
					break loop9;
				}
			}

			// AST REWRITE
			// elements: controlStat, viewSpec
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 54:54: -> ^( CONTROL ( controlStat )+ ) ^( VIEW ( viewSpec )* )
			{
				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:57: ^( CONTROL ( controlStat )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CONTROL, "CONTROL"), root_1);
				if ( !(stream_controlStat.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_controlStat.hasNext() ) {
					adaptor.addChild(root_1, stream_controlStat.nextTree());
				}
				stream_controlStat.reset();

				adaptor.addChild(root_0, root_1);
				}

				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:82: ^( VIEW ( viewSpec )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VIEW, "VIEW"), root_1);
				// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:54:89: ( viewSpec )*
				while ( stream_viewSpec.hasNext() ) {
					adaptor.addChild(root_1, stream_viewSpec.nextTree());
				}
				stream_viewSpec.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "controlModule"


	public static class controlStat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "controlStat"
	// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:57:1: controlStat : ( simSpec | runSpec ->);
	public final DynamoParser.controlStat_return controlStat() throws RecognitionException {
		DynamoParser.controlStat_return retval = new DynamoParser.controlStat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope simSpec13 =null;
		ParserRuleReturnScope runSpec14 =null;

		RewriteRuleSubtreeStream stream_runSpec=new RewriteRuleSubtreeStream(adaptor,"rule runSpec");

		try {
			// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:58:5: ( simSpec | runSpec ->)
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==SPEC) ) {
				alt10=1;
			}
			else if ( (LA10_0==RUN) ) {
				alt10=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:58:7: simSpec
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_simSpec_in_controlStat344);
					simSpec13=simSpec();
					state._fsp--;

					adaptor.addChild(root_0, simSpec13.getTree());

					}
					break;
				case 2 :
					// C:\\git3\\SDXlate\\dynamo_parser/src/org/sdxchange/grammars/dynamo/Dynamo.g:59:9: runSpec
					{
					pushFollow(FOLLOW_runSpec_in_controlStat355);
					runSpec14=runSpec();
					state._fsp--;
